--- a/jupyter_notebooks/01 - DataCollection.ipynb
+++ b/jupyter_notebooks/01 - DataCollection.ipynb
@@ -632,7 +632,7 @@
         "    if 'test' in labels:\n",
         "        pass\n",
         "    else:\n",
-        "        # create train, test folders with classes labels sub-folder\n",
+        "        # create train, test and validation folders with classes labels sub-folder\n",
         "        for folder in ['train', 'validation', 'test']:\n",
         "            for label in labels:\n",
         "                os.makedirs(name=my_data_dir + '/' + folder + '/' + label)\n",
