--- a/jupyter_notebooks/03 - Modelling and Evaluating.ipynb
+++ b/jupyter_notebooks/03 - Modelling and Evaluating.ipynb
@@ -1537,9 +1537,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 39,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[main 0c599cc3]  Add new plots\n",
+            " 12 files changed, 795 insertions(+), 103 deletions(-)\n",
+            " create mode 100644 outputs/v1/avg_diff.png\n",
+            " create mode 100644 outputs/v1/avg_var_Parasitized.png\n",
+            " create mode 100644 outputs/v1/avg_var_Uninfected.png\n",
+            " create mode 100644 outputs/v1/evaluation.pkl\n",
+            " create mode 100644 outputs/v1/image_shape.pkl\n",
+            " create mode 100644 outputs/v1/malaria_detector_model.h5\n",
+            " create mode 100644 outputs/v2/class_indices.pkl\n",
+            " create mode 100644 outputs/v2/labels_distribution.png\n",
+            " create mode 100644 outputs/v2/model_training_acc.png\n",
+            " create mode 100644 outputs/v2/model_training_losses.png\n"
+          ]
+        }
+      ],
       "source": [
         "!git commit -am \" Add new plots\""
       ]
@@ -1555,9 +1574,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 40,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enumerating objects: 22, done.\n",
+            "Counting objects: 100% (22/22), done.\n",
+            "Delta compression using up to 32 threads\n",
+            "Compressing objects: 100% (15/15), done.\n",
+            "Writing objects: 100% (18/18), 19.34 MiB | 12.95 MiB/s, done.\n",
+            "Total 18 (delta 2), reused 2 (delta 0), pack-reused 0\n",
+            "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
+            "To https://github.com/CMed01/DA-WalkthroughProject01.git\n",
+            "   5f12d439..0c599cc3  main -> main\n"
+          ]
+        }
+      ],
       "source": [
         "!git push"
       ]
@@ -1570,6 +1605,11 @@
       "source": [
         "---"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
     }
   ],
   "metadata": {
